package com.alphaeventos.alphaweb.models;

public enum Bill {
    PAID,
    UNPAID,
    ISSUED,
    UNISSUED;
}
